src/tests/testfiles/variable-declarations/1.txt
Error at 3:9: Identifier a already taken by variable
float a;
      ^
